--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,26 +94,6 @@ jobs:
             API_HOST: localhost
             API_PROTOCOL: http
 
-  docker-build-and-push:
-    working_directory: /dockerapp
-    docker:
-      - image: docker:17.05.0-ce-git
-    steps:
-      - checkout
-      - setup_remote_docker
-      - run:
-          name: Build application Docker image
-          command: |
-            docker build --cache-from=app -t app .
-      - deploy:
-          name: Publish application to docker hub
-          command: |
-            docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
-            docker tag app $DOCKER_HUB_USER_ID/my-awesome-ci-expr:$CIRCLE_BUILD_NUM
-            docker tag app $DOCKER_HUB_USER_ID/my-awesome-ci-expr:latest
-            docker push $DOCKER_HUB_USER_ID/my-awesome-ci-expr:$CIRCLE_BUILD_NUM
-            docker push $DOCKER_HUB_USER_ID/my-awesome-ci-expr:latest
-
   back-deploy-heroku:
     docker:
       - image: buildpack-deps:trusty
@@ -124,7 +104,12 @@ jobs:
           command: echo todo && false
       - run:
           name: Smoke Test
-          command: echo todo && false
+          command: 
+            HTTPCODE=`curl -s -o /dev/null -w "%{http_code}" https://safe-caverns-65754.herokuapp.com/`
+            if [ "$HTTPCODE" -ne 200 ];then
+              echo "heroku app not responding, failing deploy"
+              exit 1
+            fi
 
 workflows:
   version: 2
@@ -140,15 +125,6 @@ workflows:
       - lint:
           requires:
             - build
-      - docker-build-and-push:
-          requires:
-            - build
-            - lint
-            - back-test-e2e
-            - back-test-unit
-          filters:
-            branches:
-              only: main
       - back-deploy-heroku:
           requires:
             - build
