--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
           at: /tmp
       - run:
           name: Deploy app
-          command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git main
+          command: echo todo && false
   back-test-unit:
     docker:
       - image: circleci/node:dubnium-browsers
@@ -104,7 +104,7 @@ jobs:
           command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git main
       - run:
           name: Smoke Test
-          command: 
+          command: |
             HTTPCODE=`curl -s -o /dev/null -w "%{http_code}" https://safe-caverns-65754.herokuapp.com/`
             if [ "$HTTPCODE" -ne 200 ];then
               echo "heroku app not responding, failing deploy"
