--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,8 @@ jobs:
           at: /tmp
       - run:
           name: Deploy app
-          command: echo todo && false
+          command: sudo npm install -g --silent netlify-cli
+                   netlify deploy --prod --auth $NETLIFY_AUTH_TOKEN --dir=./server-doc --site competent-hugle-3a31c1
   back-test-unit:
     docker:
       - image: circleci/node:dubnium-browsers
