re use sudo and put | for many command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,8 +54,10 @@ jobs:
           at: /tmp
       - run:
           name: Deploy app
-          command: npm install -g --silent netlify-cli
-                   netlify deploy --prod --auth $NETLIFY_AUTH_TOKEN --dir=/tmp/server-doc --site $NETLIFY_SITE_ID
+          command: |
+            sudo npm install -g --silent netlify-cli
+            ls /tmp
+            netlify deploy --prod --auth $NETLIFY_AUTH_TOKEN --dir=/tmp/server-doc --site $NETLIFY_SITE_ID
   back-test-unit:
     docker:
       - image: circleci/node:dubnium-browsers
